# tokenforest

./: .dev.env  .gitignore  .prod.env  .test.env  AGENTS.md  GETTING_STARTED.md  Makefile  NOTES.md  README.md  README_CN.md  default.env
.github/workflows/: build.yml
backend/: Cargo.toml  README.md
backend/src/: auth.rs  crypto.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs
backend/src/core/: auth.rs  metrics.rs  mod.rs  proxy.rs
backend/src/handlers/: api_keys.rs  auth.rs  config.rs  mod.rs  stats.rs  token_pools.rs
database/: schema.sql
docs/: ARCHITECTURE.md
frontend/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.html  hooks.server.ts
frontend/src/lib/: api.ts  auth.ts  i18n.ts
frontend/src/lib/components/: ModelDropdown.svelte  Pagination.svelte  commonModels.ts
frontend/src/lib/translations/: en.json  zh.json
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/api-keys/: +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/token-pools/: +page.svelte
frontend/tests/: api-keys.spec.ts  token-pools.spec.ts
