[package]
name = "tokenforest_backend"
version = "0.1.0"
edition = "2021"
description = "TokenForest backend - A tokenhub web project"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Authentication
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["typed-header"] }
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
