[package]
name = "tokenforest_backend"
version = "0.1.0"
edition = "2021"
description = "TokenForest backend - A tokenhub web project"
default-run = "tokenforest_backend"

[lib]
name = "tokenforest_backend"
path = "src/lib.rs"

[[bin]]
name = "tokenforest_backend"
path = "src/main.rs"

[[bin]]
name = "tokenforest_core"
path = "src/bin/core.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["typed-header"] }
async-trait = "0.1"

utoipa = "5"
utoipa-swagger-ui = { version = "8", features = ["axum"] }
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["json"] }
